# okular

./: CMakeLists.txt  part.cpp  part.h
active/app/src/: CMakeLists.txt
active/components/: CMakeLists.txt  documentitem.cpp
cmake/modules/: FindLibSpectre.cmake  FindPoppler.cmake
conf/: dlgperformance.cpp
core/: area.h  bookmarkmanager.cpp  document.cpp  form.cpp  generator.cpp  textdocumentgenerator.cpp  textpage.cpp  tilesmanager.cpp
core/synctex/: synctex_parser.c
generators/: CMakeLists.txt
generators/comicbook/: document.cpp  unrar.cpp
generators/djvu/: CMakeLists.txt
generators/dvi/: TeXFont_PFB.cpp  dviRenderer_draw.cpp  dviRenderer_prescan.cpp
generators/epub/: CMakeLists.txt
generators/fax/: CMakeLists.txt  faxinit.cpp
generators/fictionbook/: CMakeLists.txt
generators/kimgio/: CMakeLists.txt
generators/mobipocket/: CMakeLists.txt
generators/ooo/: CMakeLists.txt  manifest.cpp
generators/plucker/unpluck/: config.cpp  unpluck.cpp  unpluck.h  unpluckint.h
generators/poppler/: CMakeLists.txt  annots.cpp  generator_pdf.cpp
generators/spectre/: CMakeLists.txt
generators/tiff/: CMakeLists.txt  generator_tiff.cpp
generators/txt/: CMakeLists.txt
generators/xps/: CMakeLists.txt  generator_xps.cpp
shell/: shell.cpp  shell.h
tests/: CMakeLists.txt
ui/: annotationproxymodels.cpp  annotationwidgets.cpp  embeddedfilesdialog.cpp  formwidgets.cpp  guiutils.cpp  ktreeviewsearchline.cpp  latexrenderer.cpp  layers.cpp  magnifierview.cpp  pagepainter.cpp  pageview.cpp  pageviewannotator.cpp  pageviewutils.cpp  presentationwidget.cpp  propertiesdialog.cpp  searchlineedit.cpp  sidebar.cpp  snapshottaker.cpp  snapshottaker.h  thumbnaillist.cpp  toc.cpp  tocmodel.cpp  videowidget.cpp
